[project]
name = "marble-api"
version = "0.0.0"
description = "API for the Marble software stack"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Misha Schwartz", email = "mschwa@cs.toronto.edu" }
]
maintainers = [
    { name = "Misha Schwartz", email = "mschwa@cs.toronto.edu" }
]
classifiers = [
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "D", "I", "ANN"]
ignore = ["D100", "D104", "D417", "ANN002", "ANN003"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"test/**.py" = ["D", "ANN"]
