[project]
name = "marble-api"
version = "0.0.0"
description = "API for the Marble software stack"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Misha Schwartz", email = "mschwa@cs.toronto.edu" }
]
maintainers = [
    { name = "Misha Schwartz", email = "mschwa@cs.toronto.edu" }
]
classifiers = [
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "fastapi~=0.115",
    "pymongo~=4.14",
    "geojson-pydantic~=2.0",
    "stac-pydantic~=3.4",
    "pydantic[email]~=2.11"
]

[project.optional-dependencies]
dev = ["ruff~=0.13", "pre-commit~=4.3", "fastapi[standard]"]
prod = ["uvicorn~=0.34"]
test = ["pytest~=8.4", "faker~=37.8", "pystac[validation]~=1.14"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "D", "I", "ANN"]
ignore = ["D100", "D104", "D417", "ANN002", "ANN003"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"test/**.py" = ["D", "ANN"]

[tool.pytest.ini_options]
markers = [
    "no_db_cleanup: tests with this mark will not clean up the database immediately after the test."
]